Update package json

--- a/package.json
+++ b/package.json
@@ -218,6 +218,10 @@
           "light": "./media/images/build-model_light.svg",
           "dark": "./media/images/build-model_dark.svg"
         }
+      },
+      {
+        "command": "showModelGraph",
+        "title": "Show Model Graph"
       }
     ],
     "keybindings": [
@@ -259,6 +263,11 @@
           "command": "dbtPowerUser.sqlPreview",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@5"
+        },
+        {
+          "command": "showModelGraph",
+          "when": "resourceLangId == jinja-sql",
+          "group": "1_run"
         }
       ],
       "editor/context": [
@@ -380,6 +389,7 @@
   "dependencies": {
     "@vscode/vsce": "^2.18.0",
     "@vscode/webview-ui-toolkit": "^1.2.2",
+    "@antv/g6": "^3.7.1",
     "dayjs": "^1.11.7",
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
