--- a/package.json
+++ b/package.json
@@ -58,7 +58,15 @@
               "type": "string"
             },
             "default": [],
-            "description": "Add additonal params to the dbt run model command."
+            "description": "Add additional params to the dbt run model command."
+          },
+          "dbt.buildModelCommandAdditionalParams": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "default": [],
+            "description": "Add additional params to the dbt build model command."
           },
           "dbt.profilesDirOverride": {
             "type": "string",
@@ -202,6 +210,14 @@
           "light": "./media/images/run-light.svg",
           "dark": "./media/images/run-dark.svg"
         }
+      },
+      {
+        "command": "dbtPowerUser.buildCurrentModel",
+        "title": "Build dbt Model",
+        "icon": {
+          "light": "./media/images/build-model_light.svg",
+          "dark": "./media/images/build-model_dark.svg"
+        }
       }
     ],
     "keybindings": [
@@ -225,19 +241,24 @@
           "group": "navigation@1"
         },
         {
-          "command": "dbtPowerUser.runCurrentModel",
+          "command": "dbtPowerUser.buildCurrentModel",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@2"
         },
         {
-          "command": "dbtPowerUser.testCurrentModel",
+          "command": "dbtPowerUser.runCurrentModel",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@3"
         },
         {
-          "command": "dbtPowerUser.sqlPreview",
+          "command": "dbtPowerUser.testCurrentModel",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@4"
+        },
+        {
+          "command": "dbtPowerUser.sqlPreview",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
+          "group": "navigation@5"
         }
       ],
       "editor/context": [
