--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
           "dbt.queryTemplate": {
             "type": "string",
             "description": "Override the default query template that is used by the `Preview SQL Query` command. Use this if your database has special syntax to limit query results",
-            "default": "select * from ({query}) as query limit {limit}"
+            "default": "select * from ({query}\n) as query limit {limit}"
           },
           "dbt.versionCheck": {
             "type": "string",
