--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
             "description": "Override the default query template that is used by the `Preview SQL Query` command. Use this if your database has special syntax to limit query results",
             "default": "select * from ({query}\n) as query limit {limit}"
           },
+          "dbt.queryScale": {
+            "type": "string",
+            "description": "Override the default scale of the result table that is used by the `Preview SQL Query` command.",
+            "default": 1
+          },
           "dbt.fileNameTemplateGenerateModel": {
             "type": "string",
             "enum": [
