feat: basic framework added

--- a/package.json
+++ b/package.json
@@ -452,6 +452,7 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@vscode/extension-telemetry": "^0.8.2",
     "@vscode/vsce": "^2.20.0",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "dayjs": "^1.11.9",
