--- a/package.json
+++ b/package.json
@@ -68,6 +68,10 @@
             "default": [],
             "description": "Add additional params to the dbt build model command."
           },
+          "dbt.skipParsing": {
+            "type": "boolean",
+            "description": "Option to skip re-parsing the project in the background."
+          },
           "dbt.profilesDirOverride": {
             "type": "string",
             "description": "Override the profiles dir for every dbt command. Absolute path or relative to the directory containing profiles.yml"
