--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
             "type": "string",
             "description": "Override the profiles dir for every dbt command. Absolute path or relative to the directory containing profiles.yml"
           },
+          "dbt.targetPathOverride": {
+            "type": "string",
+            "description": "Override the target-path value for dbt processes run by the extension."
+          },
           "dbt.queryLimit": {
             "type": "integer",
             "description": "The maximum number of rows the `Preview SQL Query` command returns.",
