--- a/package.json
+++ b/package.json
@@ -481,6 +481,7 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@vscode/codicons": "^0.0.33",
     "@vscode/extension-telemetry": "^0.8.4",
     "@vscode/vsce": "^2.20.1",
     "@vscode/webview-ui-toolkit": "^1.2.2",
