--- a/package.json
+++ b/package.json
@@ -271,6 +271,14 @@
         }
       },
       {
+        "command": "dbtPowerUser.generateSchemaYML",
+        "title": "Generate Documentation YML",
+        "icon": {
+          "light": "./media/images/file-code_light.svg",
+          "dark": "./media/images/file-code_dark.svg"
+        }
+      },
+      {
         "command": "dbtPowerUser.goToDocumentationEditor",
         "title": "Edit documentation",
         "icon": {
@@ -358,11 +366,6 @@
         {
           "command": "dbtPowerUser.showRunSQL",
           "group": "dbt@5",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
-        },
-        {
-          "command": "dbtPowerUser.generateSchemaYML",
-          "group": "dbt@6",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
