--- a/package.json
+++ b/package.json
@@ -46,6 +46,19 @@
     ],
     "configuration": [
       {
+        "title": "Altimate AI",
+        "properties": {
+          "dbt.altimateInstanceName": {
+            "type": "string",
+            "description": "Sign up for an altimate account to unlock ai features. Add the Altimate Instance Name here to enable the features."
+          },
+          "dbt.altimateAiKey": {
+            "type": "string",
+            "description": "Sign up for an altimate account to unlock ai features. Add the Altimate AI Key here to enable the features."
+          }
+        }
+      },
+      {
         "title": "dbt Power User",
         "properties": {
           "dbt.dbtPythonPathOverride": {
@@ -158,6 +171,11 @@
           "id": "dbt_lineage_view",
           "title": "Lineage View",
           "icon": "./media/images/dbt_icon.svg"
+        },
+        {
+          "id": "docs_edit_view",
+          "title": "Documentation Editor",
+          "icon": "./media/images/dbt_icon.svg"
         }
       ]
     },
@@ -190,6 +208,13 @@
       "dbt_lineage_view": [
         {
           "id": "dbtPowerUser.ModelViewGraph",
+          "name": "",
+          "type": "webview"
+        }
+      ],
+      "docs_edit_view": [
+        {
+          "id": "dbtPowerUser.DocsEdit",
           "name": "",
           "type": "webview"
         }
@@ -248,6 +273,14 @@
       {
         "command": "dbtPowerUser.generateSchemaYML",
         "title": "Generate Documentation YML",
+        "icon": {
+          "light": "./media/images/file-code_light.svg",
+          "dark": "./media/images/file-code_dark.svg"
+        }
+      },
+      {
+        "command": "dbtPowerUser.goToDocumentationEditor",
+        "title": "Edit documentation",
         "icon": {
           "light": "./media/images/file-code_light.svg",
           "dark": "./media/images/file-code_dark.svg"
@@ -336,11 +369,6 @@
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
-          "command": "dbtPowerUser.generateSchemaYML",
-          "group": "dbt@6",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
-        },
-        {
           "command": "dbtPowerUser.testCurrentModel",
           "group": "dbt@2",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
@@ -395,7 +423,7 @@
           "group": "inline"
         },
         {
-          "command": "dbtPowerUser.generateSchemaYML",
+          "command": "dbtPowerUser.goToDocumentationEditor",
           "when": "view == documentation_treeview",
           "group": "inline"
         }
@@ -456,12 +484,15 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@vscode/codicons": "^0.0.33",
     "@vscode/extension-telemetry": "^0.8.4",
     "@vscode/vsce": "^2.20.1",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "dayjs": "^1.11.9",
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
+    "node-abort-controller": "^3.1.1",
+    "node-fetch": "^3.3.2",
     "parse-diff": "^0.11.1",
     "python-bridge": "github:mdesmet/node-python-bridge#feat/detached",
     "reflect-metadata": "^0.1.13",
