--- a/package.json
+++ b/package.json
@@ -280,7 +280,7 @@
       },
       {
         "command": "dbtPowerUser.goToDocumentationEditor",
-        "title": "Edit documentation",
+        "title": "Open Documentation Editor",
         "icon": {
           "light": "./media/images/file-code_light.svg",
           "dark": "./media/images/file-code_dark.svg"
@@ -366,6 +366,11 @@
         {
           "command": "dbtPowerUser.showRunSQL",
           "group": "dbt@5",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
+        },
+        {
+          "command": "dbtPowerUser.goToDocumentationEditor",
+          "group": "dbt@6",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
