--- a/package.json
+++ b/package.json
@@ -181,6 +181,11 @@
           "id": "docs_edit_view",
           "title": "Documentation Editor",
           "icon": "./media/images/dbt_icon.svg"
+        },
+        {
+          "id": "lineage_view",
+          "title": "Lineage (Beta)",
+          "icon": "./media/images/dbt_icon.svg"
         }
       ]
     },
@@ -213,6 +218,13 @@
       "dbt_lineage_view": [
         {
           "id": "dbtPowerUser.ModelViewGraph",
+          "name": "",
+          "type": "webview"
+        }
+      ],
+      "lineage_view": [
+        {
+          "id": "dbtPowerUser.LineageView",
           "name": "",
           "type": "webview"
         }
