change ts config

--- a/new_lineage_panel/tsconfig.json
+++ b/new_lineage_panel/tsconfig.json
@@ -16,8 +16,10 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    /* TODO: change this to true */
+    "noUnusedLocals": false,
+    /* TODO: change this to true */
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
