--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "curly": "warn",
     "eqeqeq": "warn",
     "no-throw-literal": "warn",
-    "indent": "off"
+    "indent": "off",
+    "prettier/prettier": "off"
   }
 }
