feat: hover providers for refs and sources (#585)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "engines": {
     "vscode": "^1.82.0"
   },
+  "capabilities": {
+    "hoverProvider": true
+  },
   "categories": [
     "Other",
     "Programming Languages",
