--- a/new_lineage_panel/package.json
+++ b/new_lineage_panel/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactflow": "^11.8.3"
+    "reactflow": "^11.8.3",
+    "reactstrap": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
