--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "types": ["reflect-metadata", "node"],
     "lib": ["es6", "es2020", "dom"],
     "sourceMap": true,
-    "rootDir": "src",
+    // "rootDir": "src",
     "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
