--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
       with:
         node-version: '16'
     - run: npm install
+    - run: npm install
+      working-directory: ./new_lineage_panel
     - name: Publish Visual Studio Marketplace
       if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
       run: npm run deploy-vscode
