--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/innoverio/vscode-dbt-power-user/issues"
   },
-  "version": "0.19.0",
+  "version": "0.19.1",
   "engines": {
     "vscode": "^1.82.0"
   },
@@ -458,9 +458,9 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "vscode:prepublish": "webpack --mode production",
+    "vscode:prepublish": "npm run panel:lineage && webpack --mode production",
     "webpack": "npm run panel:lineage && webpack --mode development",
-    "webpack-dev": "webpack --mode development --watch",
+    "webpack-dev": "npm run panel:lineage && webpack --mode development --watch",
     "test-compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
