--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
           "dbt.enableNewLineagePanel": {
             "type": "boolean",
             "description": "Enable the new lineage panel in dbt."
+          },
+          "dbt.enableNewQueryPanel": {
+            "type": "boolean",
+            "description": "Enable the new query panel in dbt."
           }
         }
       },
