sample displaying in problems panel (+13 squashed commits) Squashed commits: [ede4375] WIP: do a basic check for now.. have to add more complex cases. [67de892] getting schemas for all projects that are active. [c4aa598] WIP: hacking it into sqltoref [76d0fff] move to end of nav icons [d6a8880] change verbiage [24960db] add telemetry [deaabad] fix err message [e1ce84a] add errors to surface to users. [a4642ad] conditionally show the new option if config is set right. [bfd3e04] add source name as well since that is what appears in the reference [163b430] add db/schema info when parsing sourcemetadata. also send sources to sqltomodel endpoint [daaf642] change icon to avoid confusion [393850c] revert changes to doc panel (+3 squashed commits) Squashed commits: [b5dcdfd] limit to current project, use compiled sql to allow partially migrated sqls [392d7fb] add a new provider to associate models. [0079a10] WIP: hacking doc panel for now

--- a/package.json
+++ b/package.json
@@ -265,6 +265,11 @@
         "icon": "$(circuit-board)"
       },
       {
+        "command": "dbtPowerUser.altimateScan",
+        "title": "Deep Scan",
+        "icon": "$(circuit-board)"
+      },
+      {
         "command": "dbtPowerUser.compileCurrentModel",
         "title": "Compile dbt Model",
         "icon": {
