missed switch (+1 squashed commit) Squashed commits: [c9baa95] add telemetry (+5 squashed commits) Squashed commits: [6b778a3] add the fb url [0fd7cdd] rearrange new tab (+2 squashed commits) Squashed commits: [bebd1d5] all but ephemeral ones and partial sqls' are working [9b13f3e] add err messages [5c68b33] clear out results if summary is for a diff query. [f5edf04] add the remaining UI pieces to explanation [4a9f6ec] happy path running

--- a/package.json
+++ b/package.json
@@ -360,6 +360,11 @@
         "icon": "$(play)"
       },
       {
+        "command": "dbtPowerUser.summarizeQuery",
+        "title": "Explain selected SQL",
+        "icon": "$(lightbulb-autofix)"
+      },
+      {
         "command": "dbtPowerUser.buildCurrentModel",
         "title": "Build dbt Model",
         "icon": {
@@ -386,6 +391,11 @@
         {
           "command": "dbtPowerUser.executeSQL",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
+          "group": "navigation@1"
+        },
+        {
+          "command": "dbtPowerUser.summarizeQuery",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
           "group": "navigation@1"
         },
         {
