--- a/package.json
+++ b/package.json
@@ -383,7 +383,7 @@
         },
         {
           "command": "dbtPowerUser.sqlToModel",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
           "group": "navigation@4"
         },
         {
@@ -426,7 +426,7 @@
         {
           "command": "dbtPowerUser.sqlToModel",
           "group": "dbt@3",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey"
         },
         {
           "command": "dbtPowerUser.compileCurrentModel",
