--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
           },
           "dbt.enableNewQueryPanel": {
             "type": "boolean",
-            "description": "Enable the new query panel in dbt."
+            "description": "Enable the new query panel in dbt.",
+            "default": true
           }
         }
       },
