Feat: make query panel UX configurable (#645)
---------

Co-authored-by: Shardul Sardesai <shardul@altimate.ai>
Co-authored-by: Michiel De Smet <mdesmet@gmail.com>

--- a/package.json
+++ b/package.json
@@ -67,6 +67,11 @@
           "dbt.enableNewLineagePanel": {
             "type": "boolean",
             "description": "Enable the new lineage panel in dbt."
+          },
+          "dbt.enableNewQueryPanel": {
+            "type": "boolean",
+            "description": "Enable the new query panel in dbt.",
+            "default": true
           }
         }
       },
