--- a/package.json
+++ b/package.json
@@ -260,6 +260,11 @@
         }
       },
       {
+        "command": "dbtPowerUser.sqlToModel",
+        "title": "Convert to dbt Model",
+        "icon": "$(circuit-board)"
+      },
+      {
         "command": "dbtPowerUser.compileCurrentModel",
         "title": "Compile dbt Model",
         "icon": {
@@ -385,22 +390,27 @@
           "command": "dbtPowerUser.sqlPreview",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@5"
+        },
+        {
+          "command": "dbtPowerUser.sqlToModel",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
+          "group": "navigation@6"
         }
       ],
       "editor/context": [
         {
           "command": "dbtPowerUser.showCompiledSQL",
-          "group": "dbt@4",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
-        },
-        {
-          "command": "dbtPowerUser.showRunSQL",
           "group": "dbt@5",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
-          "command": "dbtPowerUser.goToDocumentationEditor",
+          "command": "dbtPowerUser.showRunSQL",
           "group": "dbt@6",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
+        },
+        {
+          "command": "dbtPowerUser.goToDocumentationEditor",
+          "group": "dbt@7",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
@@ -414,8 +424,13 @@
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         },
         {
-          "command": "dbtPowerUser.compileCurrentModel",
+          "command": "dbtPowerUser.sqlToModel",
           "group": "dbt@3",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey"
+        },
+        {
+          "command": "dbtPowerUser.compileCurrentModel",
+          "group": "dbt@4",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/"
         }
       ],
