rename functionality as Altimate Scan

--- a/package.json
+++ b/package.json
@@ -266,7 +266,7 @@
       },
       {
         "command": "dbtPowerUser.altimateScan",
-        "title": "Deep Scan",
+        "title": "Altimate Scan",
         "icon": "$(circuit-board)"
       },
       {
