--- a/package.json
+++ b/package.json
@@ -226,6 +226,10 @@
         {
           "id": "documentation_treeview",
           "name": "Documentation"
+        },
+        {
+          "id": "icon_actions_treeview",
+          "name": "Project Actions"
         }
       ],
       "dbt_preview_results": [
@@ -268,6 +272,10 @@
         "command": "dbtPowerUser.altimateScan",
         "title": "Altimate Scan",
         "icon": "$(circuit-board)"
+      },
+      {
+        "command": "dbtPowerUser.clearAltimateScanResults",
+        "title": "Clear Altimate Scan Results"
       },
       {
         "command": "dbtPowerUser.compileCurrentModel",
