Customize icons, add feedback icon

--- a/package.json
+++ b/package.json
@@ -229,7 +229,7 @@
         },
         {
           "id": "icon_actions_treeview",
-          "name": "Project Actions"
+          "name": "Project Actions ✨"
         }
       ],
       "dbt_preview_results": [
